<resources>
    <string name="app_name" translatable="false">TimeTracker</string>
    <string name="history_activity_name" translatable="true">History</string>
    <string name="settings_activity_name" translatable="true">Settings</string>
    <string name="statistics_activity_name" translatable="true">Statistics</string>
    <string name="what_are_you_doing" translatable="true">What are you doing?</string>
    <string name="choose_category" translatable="true">Choose category</string>
    <string name="create_category" translatable="true">Create new category</string>
    <string name="category_name">Name of category</string>
    <string name="add">Add</string>
    <string name="rename">Rename</string>
    <string name="remove">Remove</string>
    <string name="minutes_to_notification">Minutes to next notification</string>
    <string name="notifications_on_off">Notifications on/off</string>
    <string name="set">Set</string>
    <string name="name">Name</string>
</resources>
