<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:elevation="5dp"
        android:theme="?attr/actionBarTheme" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adder"
        android:layout_alignStart="@+id/adder"
        android:layout_below="@+id/removeButton"
        android:layout_marginTop="22dp"
        android:checked="true" />

    <Button
        android:id="@+id/adder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:onClick="adding"
        android:text="@string/add"
        android:layout_alignTop="@+id/classificationText"
        android:layout_toRightOf="@+id/classificationText"
        android:layout_toEndOf="@+id/classificationText" />

    <EditText
        android:id="@+id/classificationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/settings_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp" />

    <Button
        android:id="@+id/renameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chooseCategoryText"
        android:layout_alignStart="@+id/chooseCategoryText"
        android:layout_below="@+id/spinner"
        android:layout_marginTop="23dp"
        android:onClick="rename"
        android:text="@string/rename" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/renameButton"
        android:layout_alignBottom="@+id/renameButton"
        android:layout_toEndOf="@+id/chooseCategoryText"
        android:layout_toRightOf="@+id/chooseCategoryText"
        android:onClick="remove"
        android:text="@string/remove" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adder"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adder"
        android:layout_alignLeft="@+id/classificationText"
        android:layout_alignStart="@+id/classificationText"
        android:text="@string/create_category" />

    <TextView
        android:id="@+id/chooseCategoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/classificationText"
        android:layout_alignStart="@+id/classificationText"
        android:layout_below="@+id/adder"
        android:layout_marginTop="11dp"
        android:text="@string/choose_category" />

    <EditText
        android:id="@+id/notificationTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/renameButton"
        android:layout_alignStart="@+id/renameButton"
        android:layout_below="@+id/toggleButton"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes_to_notification"
        android:layout_above="@+id/notificationTimeText"
        android:layout_alignLeft="@+id/notificationTimeText"
        android:layout_alignStart="@+id/notificationTimeText" />

    <TextView
        android:id="@+id/Notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButton"
        android:layout_alignStart="@+id/toggleButton"
        android:layout_below="@+id/removeButton"
        android:text="@string/notifications_on_off" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButton"
        android:layout_alignStart="@+id/toggleButton"
        android:layout_alignTop="@+id/notificationTimeText"
        android:onClick="updateNotificationTime"
        android:text="@string/set" />

</RelativeLayout>
